typo removal so that pdf will compile

--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -2249,7 +2249,7 @@ with low $N_e$. Future work could seek to find a correction for this bias.
 	\caption{
 		MS-SMC' likelihood framework. (a) ARGs were simulated under a
 		two-population species tree model with a constant $N_e$=200K and 
-		$r$=2e-9$. (b) A joint log-likelihood surface for $N_e$ and 
+		$r$=2e-9. (b) A joint log-likelihood surface for $N_e$ and 
 		$r$ inferred from the distances between tree-change events; 
 		(c) topology-change events; or (d) both. The true parameters are
 		marked by an X. (e) If the MSC model is
