--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -70,6 +70,48 @@
 }
 
 
+@article{martin_exploring_2017,
+  title = {Exploring {Evolutionary} {Relationships} {Across} the {Genome} {Using} {Topology} {Weighting}},
+  volume = {206},
+  copyright = {Copyright © 2017 Martin et al.. Available freely online through the author-supported open access option.This is an open-access article distributed under the terms of the Creative Commons Attribution 4.0 International License (http://creativecommons.org/licenses/by/4.0/), which permits unrestricted use, distribution, and reproduction in any medium, provided the original work is properly cited.},
+  issn = {0016-6731, 1943-2631},
+  url = {https://www.genetics.org/content/206/1/429},
+  doi = {10.1534/genetics.116.194720},
+  abstract = {We introduce the concept of topology weighting, a method for quantifying relationships between taxa that are not necessarily monophyletic, and visualizing how these relationships change across the genome. A given set of taxa can be related in a limited number of ways, but if each taxon is represented by multiple sequences, the number of possible topologies becomes very large. Topology weighting reduces this complexity by quantifying the contribution of each taxon topology to the full tree. We describe our method for topology weighting by iterative sampling of subtrees (Twisst), and test it on both simulated and real genomic data. Overall, we show that this is an informative and versatile approach, suitable for exploring relationships in almost any genomic dataset. Scripts to implement the method described are available at http://github.com/simonhmartin/twisst.},
+  language = {en},
+  number = {1},
+  urldate = {2020-02-03},
+  journal = {Genetics},
+  author = {Martin, Simon H. and Belleghem, Steven M. Van},
+  month = may,
+  year = {2017},
+  pmid = {28341652},
+  keywords = {incomplete lineage sorting, introgression, phylogenomics, population genomics},
+  pages = {429--438},
+  file = {Snapshot:/home/deren/Zotero/storage/JBNHZWVS/429.html:text/html;Full Text PDF:/home/deren/Zotero/storage/BRF79J8B/Martin and Belleghem - 2017 - Exploring Evolutionary Relationships Across the Ge.pdf:application/pdf},
+}
+
+
+
+@article{moore_targeted_2018,
+  title = {Targeted {Enrichment} of {Large} {Gene} {Families} for {Phylogenetic} {Inference}: {Phylogeny} and {Molecular} {Evolution} of {Photosynthesis} {Genes} in the {Portullugo} {Clade} ({Caryophyllales})},
+  volume = {67},
+  issn = {1063-5157},
+  shorttitle = {Targeted {Enrichment} of {Large} {Gene} {Families} for {Phylogenetic} {Inference}},
+  url = {https://doi.org/10.1093/sysbio/syx078},
+  doi = {10.1093/sysbio/syx078},
+  abstract = {Hybrid enrichment is an increasingly popular approach for obtaining hundreds of loci for phylogenetic analysis across many taxa quickly and cheaply. The genes targeted for sequencing are typically single-copy loci, which facilitate a more straightforward sequence assembly and homology assignment process. However, this approach limits the inclusion of most genes of functional interest, which often belong to multi-gene families. Here, we demonstrate the feasibility of including large gene families in hybrid enrichment protocols for phylogeny reconstruction and subsequent analyses of molecular evolution, using a new set of bait sequences designed for the “portullugo” (Caryophyllales), a moderately sized lineage of flowering plants ({\textasciitilde} 2200 species) that includes the cacti and harbors many evolutionary transitions to C\$\_\{{\textbackslash}mathrm\{4\}\}\$ and CAM photosynthesis. Including multi-gene families allowed us to simultaneously infer a robust phylogeny and construct a dense sampling of sequences for a major enzyme of C\$\_\{{\textbackslash}mathrm\{4\}\}\$ and CAM photosynthesis, which revealed the accumulation of adaptive amino acid substitutions associated with C\$\_\{{\textbackslash}mathrm\{4\}\}\$ and CAM origins in particular paralogs. Our final set of matrices for phylogenetic analyses included 75–218 loci across 74 taxa, with {\textasciitilde} 50\% matrix completeness across data sets. Phylogenetic resolution was greatly improved across the tree, at both shallow and deep levels. Concatenation and coalescent-based approaches both resolve the sister lineage of the cacti with strong support: Anacampserotaceae \$+\$ Portulacaceae, two lineages of mostly diminutive succulent herbs of warm, arid regions. In spite of this congruence, BUCKy concordance analyses demonstrated strong and conflicting signals across gene trees. Our results add to the growing number of examples illustrating the complexity of phylogenetic signals in genomic-scale data.},
+  number = {3},
+  urldate = {2022-08-17},
+  journal = {Systematic Biology},
+  author = {Moore, Abigail J and Vos, Jurriaan M De and Hancock, Lillian P and Goolsby, Eric and Edwards, Erika J},
+  month = may,
+  year = {2018},
+  pages = {367--383},
+  file = {Full Text PDF:/home/deren/Zotero/storage/F53CN9AZ/Moore et al. - 2018 - Targeted Enrichment of Large Gene Families for Phy.pdf:application/pdf;Snapshot:/home/deren/Zotero/storage/GG292D7W/4222382.html:text/html},
+}
+
+
 @article{jarvis_whole-genome_2014,
   title = {Whole-genome analyses resolve early branches in the tree of life of modern birds},
   volume = {346},
